# src/routes/index-v1.routes.ts
@@ -6,6 +6,7 @@ import programmingLanguageRoutes from "./programming-language.routes.js";
 import userRoutes from "./user.routes.js";
 import subjetRoutes from "./subject.routes.js";
 import activityRoutes from "./activity.routes.js";
+import enrollmentRoutes from "./enrollment.routes.js";
 
 const router = Router();
 
@@ -16,5 +17,6 @@ router.use("/programming-language", programmingLanguageRoutes);
 router.use("/user", userRoutes);
 router.use("/subject", subjetRoutes);
 router.use("/activity", activityRoutes);
+router.use("/enrollment", enrollmentRoutes);
 
 export default router;
