# src/types/responses/enrolled-student-response.model.ts
@@ -1,0 +1,8 @@
+export interface EnrolledStudentResponse {
+  id: string;
+  name: string;
+  lastName: string;
+  email: string;
+  identifier: string | null;
+  enrolledAt: string;
+}
